# ImageProcessing

./: README.md  cvreshapeexample.cpp
Clustering/: CMakeLists.txt  README.md
Clustering/include/: clustering.h
Clustering/src/: main.cpp
Savitzky-GolaySmoothing/: CMakeLists.txt  README.md
Savitzky-GolaySmoothing/include/: alignarray.h  savitzkygolayfilter.h  savitzkygolaykernel.h
Savitzky-GolaySmoothing/src/: main.cpp  savitzkygolayfilter.cpp  savitzkygolaykernel.cpp
SettingsManager/: SettingsManager.cpp  SettingsManager.h  SettingsManager.pro  main.cpp
